--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,13 +5,16 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="Send email" href="mailto://sungwookson@gmail.com"><i class="icon fa fa-envelope"></i></a>
+        <!--
+          <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+          <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
+        -->
+        <a aria-label="My Github" target="_blank" href="https://github.com/sungwookson"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
+        <a class="link" href="https://drive.google.com/file/d/107_ebGIjqSa6AcepCZ0nHHVWOrLNip-9/view?usp=sharing">Resume</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
       </div>
   </div>
