--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,8 @@
  <div class="user-details">
-  <h1> My Expertise </h1>
+  <h1> About Me </h1>
   <p> {{site.user_description}} </p>
 </div>
+<!---
   <div class="user">
     <div class="tech">
       <h2>Design</h2>
@@ -28,3 +29,4 @@
         Vinyl XOXO lumbersexual</p>
     </div>
 </div>
+-->
