--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,9 @@
           <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
           <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
         -->
+        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/sungwook-son-44ab3363"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/sungwookson"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My KakaoTalk" target="_blank" href="https://open.kakao.com/me/sungwookson"><i class="icon fa fa-comment" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
