--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,17 +3,20 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/rescuecam-prototype.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> Rescue Camera - Cruz Roja </h3>
     <ul>
-      <li> Featured Skills</li>
+      <!--<li> Featured Skills</li>-->
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p></p>
+    <a class="project-link" href="https://docs.google.com/document/d/1uFWimeWKxXUa4S5Bcfr-Sd0EfmVo53Q7AJxChjSqbOs/edit?usp=sharing">Project Specs</a>
+    <a class="project-link" href="https://docs.google.com/presentation/d/1iYsUzkT9fUEwBKYyKjOD7x-IYgN5FP6n9aUrVjeAKmA/edit?usp=sharing">Check it out</a>
   </div>
 </div>
+
+<!--
 <div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
@@ -27,3 +30,5 @@
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
+
+-->
