Added Project report

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,6 +12,7 @@
     </ul>
     <p></p>
     <a class="project-link" href="https://docs.google.com/document/d/1uFWimeWKxXUa4S5Bcfr-Sd0EfmVo53Q7AJxChjSqbOs/edit?usp=sharing">Project Specs</a>
+    <a class="project-link" href="https://docs.google.com/document/d/1r2LAmEDwAjxOoZWr4lWNqf7GYR-E2OMCFlbRD_x7tso/edit?usp=sharing">Project Report</a>
     <a class="project-link" href="https://docs.google.com/presentation/d/1iYsUzkT9fUEwBKYyKjOD7x-IYgN5FP6n9aUrVjeAKmA/edit?usp=sharing">Check it out</a>
   </div>
 </div>
