Small changes for rescuacam project

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,17 +3,19 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/rescuecam-prototype.jpg" | prepend: site.baseurl }}" />
+    <img alt="Rescuecam-prototype" src="{{ "/assets/img/rescuecam-prototype.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Rescue Camera - Cruz Roja </h3>
     <ul>
-      <!--<li> Featured Skills</li>-->
+      <li>Raspberry Pi</li>
+      <li>Linux</li>
+      <li>IoT</li>
     </ul>
-    <p></p>
-    <a class="project-link" href="https://docs.google.com/document/d/1uFWimeWKxXUa4S5Bcfr-Sd0EfmVo53Q7AJxChjSqbOs/edit?usp=sharing">Project Specs</a>
-    <a class="project-link" href="https://docs.google.com/document/d/1r2LAmEDwAjxOoZWr4lWNqf7GYR-E2OMCFlbRD_x7tso/edit?usp=sharing">Project Report</a>
-    <a class="project-link" href="https://docs.google.com/presentation/d/1iYsUzkT9fUEwBKYyKjOD7x-IYgN5FP6n9aUrVjeAKmA/edit?usp=sharing">Check it out</a>
+    <p>Mission: to design a search and rescue camera to find people trapped inside collapsed structures. This camera will be used by urban search and rescue technicians in case of earthquake, collapsed buildings, mudslides.
+    </p>
+    <a class="project-link" href="https://github.com/sungwookson/RescueCamera">Github</a>
+    <a class="project-link" href="https://docs.google.com/document/d/1vdmKafg33WUVsOyEG5Pra1uuoiFO8LCDPPO1OBE7xpo/edit?usp=sharing">Project Report</a>
   </div>
 </div>
 
