--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,6 +2,22 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
+  <div class="images-left">
+    <img alt="EMSTrack-prototype" src="{{ "/assets/img/EMSTrack.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> EMS Track - Cruz Roja </h3>
+    <ul>
+      <li>Python</li>
+      <li>Django</li>
+      <li>Android Studio</li>
+    </ul>
+    <p>Our Mission is to partner with health organizations to help residents of underserved communities worldwide make better use of their resources in emergency medical situations by providing them with an enhanced infrastructure that can track, dispatch, and visualize resources in real time on a map.
+    </p>
+    <a class="project-link" href="https://github.com/EMSTrack">Github</a>
+  </div>
+</div>
+<div class="user-projects">
   <div class="images-right">
     <img alt="Rescuecam-prototype" src="{{ "/assets/img/rescuecam-prototype.png" | prepend: site.baseurl }}" />
   </div>
