--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
   <div class="images-left">
     <img alt="EMSTrack-prototype" src="{{ "/assets/img/EMSTrack.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents">
+  <div class="contents-right">
     <h3> EMS Track - Cruz Roja </h3>
     <ul>
       <li>Python</li>
