--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,10 +1,26 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
 </div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="VibeR8r-prototype" src="{{ "/assets/img/viber8r.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Vibe-R8r - UCSD HC4H</h3>
+    <p> Our goal is to enhance the efficacy of the alarm system & To lessen the burden of practitioners in hospitals
+    </p>
+    <ul>
+      <li>The current alarm system <b>leads to alarm fatigue</b></li>
+      <li>The current alarm system <b>alerts everyone</b> in the hospital, instead of only those that need to be notified</li>
+      <li>The current alarm system <b>>cannot track the response</b> to the alarm</li>
+    </ul>
+    <a class="project-link" href="https://hc4h.appma.kr/">Check it out</a>
+  </div>
+</div>
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="EMSTrack" src="{{ "/assets/img/EMSTrack.jpg" | prepend: site.baseurl }}" />
+    <img alt="EMSTrack" src="{{ "/assets/img/EMSTrack-min.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> EMS Track - Cruz Roja </h3>
@@ -13,7 +29,7 @@
       <li>Django</li>
       <li>Android Studio</li>
     </ul>
-    <p>Our Mission is to partner with health organizations to help residents of underserved communities worldwide make better use of their resources in emergency medical situations by providing them with an enhanced infrastructure that can track, dispatch, and visualize resources in real time on a map.</p>      
+    <p>Our mission is to partner with health organizations to help residents of underserved communities worldwide make better use of their resources in emergency medical situations by providing them with an enhanced infrastructure that can track, dispatch, and visualize resources in real time on a map.</p>      
     <a class="project-link" href="https://github.com/EMSTrack">Github</a>
   </div>
 </div>
