--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,7 @@
     <ul>
       <li>The current alarm system <b>leads to alarm fatigue</b></li>
       <li>The current alarm system <b>alerts everyone</b> in the hospital, instead of only those that need to be notified</li>
-      <li>The current alarm system <b>>cannot track the response</b> to the alarm</li>
+      <li>The current alarm system <b>cannot track the response</b> to the alarm</li>
     </ul>
     <a class="project-link" href="https://hc4h.appma.kr/">Check it out</a>
   </div>
@@ -24,12 +24,12 @@
   </div>
   <div class="contents-right">
     <h3> EMS Track - Cruz Roja </h3>
+    <p>Our mission is to partner with health organizations to help residents of underserved communities worldwide make better use of their resources in emergency medical situations by providing them with an enhanced infrastructure that can track, dispatch, and visualize resources in real time on a map.</p>      
     <ul>
       <li> Python</li>
       <li>Django</li>
       <li>Android Studio</li>
     </ul>
-    <p>Our mission is to partner with health organizations to help residents of underserved communities worldwide make better use of their resources in emergency medical situations by providing them with an enhanced infrastructure that can track, dispatch, and visualize resources in real time on a map.</p>      
     <a class="project-link" href="https://github.com/EMSTrack">Github</a>
   </div>
 </div>
@@ -40,13 +40,12 @@
   </div>
   <div class="contents">
     <h3> Rescue Camera - Cruz Roja </h3>
+    <p>Mission: to design a search and rescue camera to find people trapped inside collapsed structures. This camera will be used by urban search and rescue technicians in case of earthquake, collapsed buildings, mudslides.</p>
     <ul>
       <li>Raspberry Pi</li>
       <li>Linux</li>
       <li>IoT</li>
     </ul>
-    <p>Mission: to design a search and rescue camera to find people trapped inside collapsed structures. This camera will be used by urban search and rescue technicians in case of earthquake, collapsed buildings, mudslides.
-    </p>
     <a class="project-link" href="https://github.com/sungwookson/RescueCamera">Github</a>
     <a class="project-link" href="https://docs.google.com/document/d/1vdmKafg33WUVsOyEG5Pra1uuoiFO8LCDPPO1OBE7xpo/edit?usp=sharing">Project Report</a>
   </div>
