--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -51,6 +51,17 @@
   </div>
 </div>
 
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="App Development" src="{{ "/assets/img/appdev.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> App Developments </h3>
+    <p></p>  
+    <a class="project-link" href="https://about.appma.kr">Site</a>
+  </div>
+</div>
+
 <!--
 <div class="user-projects">
   <div class="images-left">
@@ -65,5 +76,4 @@
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
-
 -->
