Changed name of project

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,7 +6,7 @@
     <img alt="VibeR8r-prototype" src="{{ "/assets/img/viber8r.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Vibe-R8r - UCSD HC4H</h3>
+    <h3> Pulser - UCSD HC4H</h3>
     <p> Our goal is to enhance the efficacy of the alarm system & To lessen the burden of practitioners in hospitals
     </p>
     <ul>
