Modifying guest user login

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
   {% include head.html %}
   <body>
       {% include header.html %}
+      {% include modal-style.html %}
+
       <section id="about">
         {% include about.html %}
       </section>
