Adding Slam Project

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -50,12 +50,29 @@
     <a class="project-link" href="https://docs.google.com/document/d/1vdmKafg33WUVsOyEG5Pra1uuoiFO8LCDPPO1OBE7xpo/edit?usp=sharing">Project Report</a>
   </div>
 </div>
-
 <div class="user-projects">
   <div class="images-left">
-    <img alt="App Development" src="{{ "/assets/img/appdev.jpg" | prepend: site.baseurl }}" />
+    <img alt="SLAM Reconstrucion" src="{{ "/assets/img/slam.gif" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
+    <h3> 3D Reconstrucion - Google Tango </h3>
+    <p></p>  
+    <ul>
+      <li>SLAM</li>
+      <li>Android</li>
+      <li>Google Tango</li>
+      <li>Embedded Systems</li>
+    </ul>
+    
+    <a class="project-link" href="https://docs.google.com/document/d/e/2PACX-1vQmmCAU5erjWcUcJM1bzcTXwLHJjn_-7QOgp58kjN5XbCSIgpkjuHBTW7lH_DxOAvW_QwTkwO2jXpeB/pub">Site</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="App Development" src="{{ "/assets/img/appdev.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
     <h3> App Developments </h3>
     <p></p>  
     <a class="project-link" href="https://about.appma.kr">Site</a>
