Added SLAM description and updated image

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -52,11 +52,11 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="SLAM Reconstrucion" src="{{ "/assets/img/slam.gif" | prepend: site.baseurl }}" />
+    <img alt="SLAM Reconstrucion" src="{{ "/assets/img/slam.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> 3D Reconstrucion - Google Tango </h3>
-    <p></p>  
+    <p>The goal of this project is to implement technological advancements in current field of art and archeology for further visualization. This visualization not only allows artists and archeologists to detail their findings, but also allows them to build a highly scaled model with much deeper depth and detail. Even today, many of the artists and archeologists are limited from many of these modern resources. These artists and archeologists use an out-dated method of drawing a 3D model on paper with pencil. This use of long established method, when compared to the use of modern technology, falls behind in many qualities; as the size of mapping gets larger, visualization through the use of traditional method gets obscure. Thus, with bigger findings, this 3D reconstruction provides better accuracy and efficiency. This project aims to provide artists and archeologists with a mobile system that can reconstruct an underground environment, with real-time partial or full feedback.</p>  
     <ul>
       <li>SLAM</li>
       <li>Android</li>
