--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -64,7 +64,7 @@
       <li>Embedded Systems</li>
     </ul>
     
-    <a class="project-link" href="https://docs.google.com/document/d/e/2PACX-1vQmmCAU5erjWcUcJM1bzcTXwLHJjn_-7QOgp58kjN5XbCSIgpkjuHBTW7lH_DxOAvW_QwTkwO2jXpeB/pub">Site</a>
+    <a class="project-link" href="https://docs.google.com/document/d/e/2PACX-1vQmmCAU5erjWcUcJM1bzcTXwLHJjn_-7QOgp58kjN5XbCSIgpkjuHBTW7lH_DxOAvW_QwTkwO2jXpeB/pub">Project Report</a>
   </div>
 </div>
 
