--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -75,7 +75,7 @@
   <div class="contents">
     <h3> App Developments </h3>
     <p></p>  
-    <a class="project-link" href="https://apps.appma.kr">Site</a>
+    <a class="project-link" href="https://sites.google.com/view/about-sungwook/home">Site</a>
   </div>
 </div>
 
