--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="https://docs.google.com/document/d/e/2PACX-1vS7vqyNXohLiKq1APFQaFz0zoK1F1qWJxOqQrZ5MDzft0eLIAtq2XG_ftnCPJqWjLM7avclkVjW6KLP/pub">Resume</a>
+        <a class="link" href="https://github.com/sungwookson/resume/releases/download/Resume_2023.05.17.10.41/resume.pdf">Resume</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
