update: blog v2 swap about and home tab

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,8 +38,15 @@
 
   {{ seo_tags }}
 
-  <title>
+  <!-- <title>
     {%- unless page.layout == 'home' -%}
+      {{ page.title | append: ' | ' }}
+    {%- endunless -%}
+    {{ site.title }}
+  </title> -->
+
+  <title>
+    {%- unless page.url == '/' | relative_url -%}
       {{ page.title | append: ' | ' }}
     {%- endunless -%}
     {{ site.title }}
