--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,19 +27,27 @@
   <nav class="flex-column flex-grow-1 w-100 ps-0">
     <ul class="nav">
       <!-- home -->
-      <li class="nav-item{% if page.layout == 'home' %}{{ " active" }}{% endif %}">
+      <li class="nav-item{% if page.url == '/' | relative_url %}{{ " active" }}{% endif %}">
         <a href="{{ '/' | relative_url }}" class="nav-link">
           <i class="fa-fw fas fa-home"></i>
           <span>{{ site.data.locales[include.lang].tabs.home | upcase }}</span>
         </a>
       </li>
+      <!-- blog -->
+      <li class="nav-item{% if page.url == '/blog/' | relative_url %}{{ " active" }}{% endif %}">
+        <a href="{{ '/blog/' | relative_url }}" class="nav-link">
+          <i class="fa-fw fas fa-pen"></i> 
+          <span>{{ site.data.locales[include.lang].tabs.blog | upcase }}</span>
+        </a>
+      </li>
       <!-- the real tabs -->
       {% for tab in site.tabs %}
+        {% if tab.url == '/' | relative_url %}{% continue %}{% endif %}
         <li class="nav-item{% if tab.url == page.url %}{{ " active" }}{% endif %}">
           <a href="{{ tab.url | relative_url }}" class="nav-link">
             <i class="fa-fw {{ tab.icon }}"></i>
             {% capture tab_name %}{{ tab.url | split: '/' }}{% endcapture %}
-
+  
             <span>{{ site.data.locales[include.lang].tabs.[tab_name] | default: tab.title | upcase }}</span>
           </a>
         </li>
