--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,6 @@
         
         -->
         <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/sungwook-son-44ab3363"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
-        <a aria-label="My KakaoTalk" target="_blank" href="https://open.kakao.com/me/sungwookson"><i class="icon fa fa-comment" aria-hidden="true"></i></a>
         <a aria-label="Send email" href="mailto://sungwookson@gmail.com"><i class="icon fa fa-envelope"></i></a>
         
       </div>
@@ -20,7 +19,7 @@
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="https://github.com/sungwookson/resume/releases/download/Resume_2023.05.17.10.41/resume.pdf">Resume</a>
+        <a class="link" href="https://docs.google.com/viewer?url=https://github.com/sungwookson/resume-public/releases/latest/download/resume.pdff">Resume</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
