--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="https://docs.google.com/viewer?url=https://github.com/sungwookson/resume-public/releases/latest/download/resume.pdff">Resume</a>
+        <a class="link" href="https://docs.google.com/viewer?url=https://github.com/sungwookson/resume-public/releases/latest/download/resume.pdf">Resume</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
